# tvg_hacks

./: Readme.md
.cursor/rules/: morph.mdc
app_context/: readme.md  tvg.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  crowd.py  events.py  forecasts.py  layer3.py  layer4.py
backend/app/models/: __init__.py  crowd_signal.py  dispatch.py  energy.py  event.py  forecast.py  layer3.py
backend/app/schemas/: __init__.py  events.py  forecast.py  layer3.py  layer4.py
backend/app/services/: __init__.py  crowd_fusion.py  demand_wave.py  dispatch_engine.py  dispersal_model.py  energy_lookup.py  ercot_service.py  event_ingestion.py  frame_provider.py  urban_planning.py  vlm_gemini.py  weather_service.py
backend/data/: comprehensive_energy_lookup_5deg.csv
backend/gridpulse_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_csv_ingestion.py  test_energy_lookup_service.py  test_layer1_ingestion.py  test_layer2_fusion.py  test_layer3_api.py  test_layer4_dispatch.py
backend/tests/fixtures/: sample_events.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: DispatchPanel.tsx  DispatchTerminal.tsx  Footer.tsx  HeroSection.tsx  LiveFeedDashboard.tsx  MapCanvas.tsx  TelemetryBar.tsx  ThreatList.tsx  UrbanOverlayToggle.tsx  VisionCamera.tsx  WeatherSlider.tsx  WeatherStress.tsx
frontend/src/types/: api.ts
